--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "sheets_map",
-  "version": "0.0.1",
-  "private": true,
+  "name": "@paupololi/sheets_map",
+  "version": "0.0.2",
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
