--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@paupololi/sheets_map",
-  "version": "0.0.26",
+  "version": "0.0.27",
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -9,6 +9,7 @@
     "build-library": "vue-cli-service build --target lib --name index ./src/components/SheetsMap.vue"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "leaflet": "^1.8.0",
     "vue": "^2.6.14",
