--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "leaflet": "^1.8.0",
+    "supercluster": "^7.1.5",
     "vue": "^2.6.14",
     "vue2-leaflet": "^2.7.1"
   },
