--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.3",
+    "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
     "leaflet": "^1.8.0",
+    "save": "^2.5.0",
     "vue": "^2.6.14",
     "vue2-leaflet": "^2.7.1"
   },
