--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.8.3",
     "h3-js": "^3.7.2",
     "leaflet": "^1.8.0",
+    "lodash": "^4.17.21",
     "save": "^2.5.0",
     "supercluster": "^7.1.5",
     "vue": "^2.6.14",
