--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.23.1",
     "h3-js": "^3.7.2",
+    "heatmap.js": "^2.0.5",
     "leaflet": "^1.8.0",
     "lodash": "^4.17.21",
     "save": "^2.5.0",
