--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@paupololi/sheets_map",
-  "version": "0.3.18",
+  "version": "0.3.19",
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -34,6 +34,9 @@
     "node-sass": "^7.0.1",
     "sass-loader": "^13.0.2",
     "vue-template-compiler": "^2.6.14"
+  },
+  "overrides": {
+    "autoprefixer": "10.4.5"
   },
   "eslintConfig": {
     "root": true,
