--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,6 @@
 {
-  "compilerOptions": {
-    "target": "es5",
+  "vueCompilerOptions": {
+    "target": 2.7,
     "module": "esnext",
     "baseUrl": "./",
     "moduleResolution": "node",
@@ -14,6 +14,9 @@
       "dom",
       "dom.iterable",
       "scripthost"
+    ],
+    "extensions": [
+      ".vue"
     ]
   }
 }
