--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lodash": "^4.17.21",
     "save": "^2.5.0",
     "supercluster": "^7.1.5",
-    "vue": "^2.6.14",
+    "vue": "^2.7.13",
     "vue2-leaflet": "^2.7.1"
   },
   "devDependencies": {
@@ -29,6 +29,7 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vue/runtime-dom": "^3.2.41",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "node-sass": "^7.0.1",
