--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@paupololi/sheets_map",
-  "version": "1.14.5",
+  "version": "1.14.6",
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "npm run build-library",
+    "build:lib": "npm run build-library",
     "lint": "vue-cli-service lint",
     "build-library": "vue-cli-service build --target lib --name index ./src/main.js"
   },
