--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@paupololi/sheets_map",
-  "version": "1.22.0",
+  "name": "@coderhubspa/sheets_map",
+  "version": "1.23.0",
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
