--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@coderhubspa/sheets_map",
+  "name": "@CoderhubSpA/sheets_map",
   "version": "1.24.0",
   "private": false,
   "scripts": {
