--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@CoderhubSpA/sheets_map",
-  "version": "1.24.1",
+  "name": "@coderhubspa/sheets_map",
+  "version": "1.24.3",
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
