--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "heatmap.js": "^2.0.5",
     "leaflet": "^1.8.0",
     "lodash": "^4.17.21",
+    "proj4": "^2.11.0",
     "save": "^2.5.0",
     "supercluster": "^7.1.5",
     "vue": "^2.7.13",
