--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@CoderhubSpA/sheets_map",
-  "version": "1.39.0",
+  "version": "1.39.1",
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -10,6 +10,7 @@
     "build-library": "vue-cli-service build --target lib --name index ./src/main.js"
   },
   "dependencies": {
+    "@CoderhubSpA/sheets_map": "^1.39.1",
     "@geoman-io/leaflet-geoman-free": "^2.15.0",
     "axios": "^0.27.2",
     "bootstrap": "^4.6.2",
