--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.21",
     "proj4": "^2.11.0",
     "save": "^2.5.0",
+    "simplify-js": "^1.2.4",
     "supercluster": "^7.1.5",
     "vue": "^2.7.13",
     "vue2-leaflet": "^2.7.1"
