--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@geoman-io/leaflet-geoman-free": "^2.15.0",
+    "@maplibre/maplibre-gl-leaflet": "^0.1.3",
     "axios": "^0.27.2",
     "bootstrap": "^4.6.2",
     "bootstrap-icons": "^1.8.3",
@@ -20,15 +21,14 @@
     "h3-js": "^3.7.2",
     "heatmap.js": "^2.0.5",
     "leaflet": "^1.8.0",
-    "leaflet.vectorgrid": "^1.3.0",
     "lodash": "^4.17.21",
+    "maplibre-gl": "^5.8.0",
     "proj4": "^2.11.0",
     "save": "^2.5.0",
     "simplify-js": "^1.2.4",
     "supercluster": "^7.1.5",
     "vue": "^2.7.13",
-    "vue2-leaflet": "^2.7.1",
-    "vue2-leaflet-vectorgrid": "^1.1.1"
+    "vue2-leaflet": "^2.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.18.5",
