--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "bootstrap-icons": "^1.8.3",
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.23.1",
-    "dom-to-image": "^2.2.1",
     "h3-js": "^3.7.2",
     "heatmap.js": "^2.0.5",
+    "html2canvas": "^1.4.1",
     "leaflet": "^1.8.0",
     "lodash": "^4.17.21",
     "maplibre-gl": "^5.8.0",
